<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/red"
        android:gravity="center"
        android:padding="3dp"
        android:scaleType="fitXY"
        android:text="党员承诺:"
        android:textColor="@color/yellow"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/red"
        android:gravity="center"
        android:padding="3dp"
        android:scaleType="fitXY"
        android:text="我承诺永远忠诚于中国共产党！"
        android:textColor="@color/yellow"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/firstfragment_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/red"
        android:gravity="right"
        android:padding="3dp"
        android:scaleType="fitXY"
        android:text=""
        android:textColor="@color/yellow"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/ll_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_title"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <!-- 第一行 -->

        <LinearLayout
            android:id="@+id/ll_tongji_chaxun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/boderq"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/gerenxinxi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/a" />
        </LinearLayout>

        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@color/red" />

        <LinearLayout
            android:id="@+id/ll_dangyuan_kaoping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/boderq"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/qiandaoqiantui" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/b" />
        </LinearLayout>

        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@color/red" />

        <LinearLayout
            android:id="@+id/ll_duangyuan_xuexi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/boderq"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/jifen" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/c" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/red" />
    <!-- 第二行 -->

    <LinearLayout
        android:id="@+id/ll_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_first"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_gongshi_gongkai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/boderq"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/zi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/d" />
        </LinearLayout>

        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:background="@color/red" />

        <LinearLayout
            android:id="@+id/ll_fengcai_zhanshi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/boderq"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/hu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/e" />
        </LinearLayout>

        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:background="@color/red" />

        <LinearLayout
            android:id="@+id/ll_baibaoxiang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/boderq"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/xuexihuiyi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/f" />
        </LinearLayout>
    </LinearLayout>

    <!-- 第三行 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_second"
        android:orientation="horizontal" >
    </LinearLayout>

</LinearLayout>