<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED"
    android:orientation="vertical" >

    <include layout="@layout/titlebar" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:padding="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/hdf" />

    <LinearLayout
        android:id="@+id/ll_mylocation"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/boder"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="接收新消息通知" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="已开启"
            android:textColor="#88000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_select_photo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/boder"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="通知显示消息详情" />

        <ToggleButton
        android:id="@+id/tgb_btn"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="@drawable/toggle"
        android:button="@drawable/ios7_btn"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:checked="false"
        android:text=""
        android:textOff=""
        android:textOn="" />
        
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:text="@string/tongzhi"
        android:textColor="@color/common_grey_transparency"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/ll_gongneng_xiaoxi"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/boder"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="功能消息免打扰" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:src="@drawable/brn_join" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:text="@string/gongneng"
        android:textColor="@color/common_grey_transparency"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/ll_updata"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/boder"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="接受新消息通知" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="已开启"
            android:textColor="#88000000" />
    </LinearLayout>
    <!-- 关于我们 -->

    <RelativeLayout
        android:id="@+id/ll_about_me"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/boder"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="声音" />

        <ToggleButton
            android:id="@+id/tgb_btn1"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/toggle"
            android:button="@drawable/ios7_btn"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn="" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/boder"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="震动" />

        <ToggleButton
        android:id="@+id/tgb_btn2"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="@drawable/toggle"
        android:button="@drawable/ios7_btn"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:checked="false"
        android:text=""
        android:textOff=""
        android:textOn="" />
    </RelativeLayout>
  <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:text="@string/bottom"
        android:textColor="@color/common_grey_transparency"
        android:textSize="12sp" />
</LinearLayout>